<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Text_Principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_Principal"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TextSecundario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_SubPrincipal"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Principal"
        android:layout_marginTop="5sp" />

    <EditText
        android:id="@+id/Real1"
        style="@style/Edit_Text"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:drawableEnd="@mipmap/ic_brasil_bandeira_foreground"
        android:hint="@string/ValorConv"
        android:inputType="numberDecimal"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/TextSecundario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextSecundario" />

    <!-- botão -->

    <EditText
        android:id="@+id/Dolar1"
        style="@style/Edit_Text"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:drawableEnd="@mipmap/ic_usd_bandeira_foreground"
        android:hint="@string/Dolar"
        android:inputType="numberDecimal"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/Real1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Real1" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        android:onClick="conversor"
        android:text="@string/BotaoConverter"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dolar1" />


    <EditText
        android:id="@+id/Resultado1"
        style="@style/Edit_Text"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:drawableStart="@mipmap/ic_brasil_bandeira_foreground"
        android:drawableEnd="@mipmap/ic_usd_bandeira_foreground"
        android:hint="@string/Resultado"
        android:inputType="none"
        android:focusable="false"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        android:maxLength="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/botao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao" />



</androidx.constraintlayout.widget.ConstraintLayout>
